--- a/first/login.html
+++ b/first/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/login.css" />
     <link rel="shortcut icon" href="images/w3schools.ico" type="image/x-icon" />
-    <title></title>
+    <title>login page</title>
   </head>
   <body>
     <noscript>please turn on your javascript</noscript>
