--- a/first/login.html
+++ b/first/login.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/login.css" />
     <link rel="shortcut icon" href="images/w3schools.ico" type="image/x-icon" />
-    <title>login page</title>
+    <title>Log in -W3schools</title>
   </head>
   <body>
     <noscript>please turn on your javascript</noscript>
-    <section class="login-form">
-      <div>
+    <section class="login-form col-xs-6">
+      <div class="row">
         <form action="main.php" method="post">
           <h3>Login</h3>
           <input
