--- a/first/index.html
+++ b/first/index.html
@@ -19,66 +19,16 @@
         </li>
       </ul>
     </nav>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>&#9830</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-<p>سلام</p>
-
+    <div class="background">
+      <div class="road"></div>
+      <div class="trees"></div>
+      <div class="car">
+        <img src="images/car-body.png" alt="">
+      </div>
+      <div class="wheels">
+        <img class="front-wheel" src="images/wheel1.png" alt="">
+        <img class="back-wheel" src="images/wheel1.png" alt="">
+      </div>
+    </div>
   </body>
 </html>
