--- a/first animation/index.html
+++ b/first animation/index.html
@@ -14,12 +14,19 @@
     <div class="background">
       <div class="road"></div>
       <div class="trees"></div>
-      <div class="car">
-        <img src="images/car-body.png" alt="">
+      <div class="l90">
+        <img src="images/l90-body.png" alt="logan l90 car">
       </div>
-      <div class="wheels">
-        <img class="front-wheel" src="images/wheel1.png" alt="">
-        <img class="back-wheel" src="images/wheel1.png" alt="">
+      <div class="l90-wheels">
+        <img class="l90-front-wheel" src="images/l90-wheel.png" alt="">
+        <img class="l90-back-wheel" src="images/l90-wheel.png" alt="">
+      </div>
+      <div class="audi">
+        <img src="images/audi-body.png" alt="audi car">
+      </div>
+      <div class="audi-wheels">
+        <img src="images/audi-wheel.png" alt="" class="audi-front-wheel">
+        <img src="images/audi-wheel.png" alt="" class="audi-back-wheel">
       </div>
     </div>
   </body>
