--- a/first/index.html
+++ b/first/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>/</title>
+    <title>animation</title>
   </head>
   <body>
     <nav>
@@ -22,8 +22,9 @@
     <div class="background">
       <div class="road"></div>
       <div class="trees"></div>
+      <div class="login-link"><a href="login.html" style="color: black;">Login</a></div>
       <div class="car">
-        <img src="images/car-body.png" alt="">
+        <a href="login.html"><img src="images/car-body.png" alt=""></a>
       </div>
       <div class="wheels">
         <img class="front-wheel" src="images/wheel1.png" alt="">
