--- a/first/login.html
+++ b/first/login.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <noscript>please turn on your javascript</noscript>
-    <div class="loading"></div>
+    <!-- <div class="loading"></div> -->
       <section class="login-form col-xs-6">
         <div class="row">
           <form action="main.php" method="post">
